Add the add category button

--- a/applications/dashboard/design/admin.css
+++ b/applications/dashboard/design/admin.css
@@ -3712,4 +3712,9 @@ span.InformSprite.Dice {
   padding: 0 8px;
   margin-bottom: 4px;
 }
+
+.heading-bar .actions {
+  float: right;
+  padding: 6px 18px 0 0;
+}
 /*# sourceMappingURL=admin.css.map */
