Tweak category settings padding

--- a/applications/dashboard/design/admin.css
+++ b/applications/dashboard/design/admin.css
@@ -3529,7 +3529,7 @@ span.InformSprite.Dice {
 
 .dd {
   color: #555a62;
-  padding: 12px 18px;
+  padding: 18px;
   position: relative;
   fill: #555a62;
 }
